--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-TELEGRAM_BOT_TOKEN= # your telegrma bot token
-DEVELOPER_CHAT_ID= # admin chat_id, to recive error messages
-IMAGE_SAVE_PATH=/home/path_to_project/alpha_bots/images/
-DEFAULT_HIDE_ELEMENTS= # css elemenr identifier separete by divider "," for e.g.: div,.cookie-consent,#alert-message
+TELEGRAM_BOT_TOKEN= # your telegram bot token
+DEVELOPER_CHAT_ID= # admin chat_id, to receive error messages
+IMAGE_SAVE_PATH=/home/path_to_project/telegram_bot_url_to_image/images/
+DEFAULT_HIDE_ELEMENTS= # css element identifier separated by divider "," for e.g.: div,.cookie-consent,#alert-message
